# pack-py-mjr

./: ASSIGNMENT.txt  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/example_package_marlinroberts21/: example.py
tests/: test_simple.py
