[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "example_package_marlinroberts21"
version = "0.0.8"
authors = [
  { name="Marlin Roberts", email="marlinroberts21@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/marlinroberts21/pack-py-mjr.git"
Issues = "https://github.com/marlinroberts21/pack-py-mjr/issues"